# kucing

./: Cargo.cleaned.toml  Cargo.final.toml  Cargo.toml  CargoAman.toml  README.md  wrangler.toml
.github/workflows/: cf.yml  cfmuah.yml  generate-lock.yml
src/: lib.rs  libkimochi.rs
src/common/: mod (1).rs  mod.rs
src/proxy/: Tstdns.rs.test  bakdns.rs.bak  conn.rs  connZ.rs  conn_patched.rs  conn_safe.rs  connking.rs  connyy.rs  dns.rs  dns99.rs  dns_fixed.rs  dnsyu.rs  fixed_dnsper.rs  jahat.bak  nodns.rsno  pilot  shadowsocks.rs  trojan.rs  trojan_fixed.rs  trojanm.rs  vless.rs  vmess.rs
