[package]
name = "siren"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.28", default-features = false, features = ["io-util", "rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
worker = "0.5.0"
futures-util = "0.3.28"
pin-project-lite = "0.2"
uuid = "1.8.0"
bytes = "1.4.0"
aes-gcm = "0.10"
aes = "0.8"
sha2 = "0.10"
md-5 = "0.10"
anyhow = "1.0.86"
hex = "0.4"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.11.1"
once_cell = "1.21.3"
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
trust-dns-proto = { version = "0.23", default-features = false }
trust-dns-client = "0.19"  # Tambahkan dependensi trust-dns-client
rand = { version = "0.8", default-features = false }
futures = "0.3"  # Tambahkan dependensi futures jika belum ada
net2 = "0.2.39"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
